# md-todo

./: .env.example  CLAUDE.md  DOCKER_README.md  README.md  docker-compose.yml
.claude/commands/: dev.md  devtest.md  issue.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml
.kiro/specs/markdown-todo-app/: design.md  requirements.md  tasks.md
backend/: .dockerignore  Cargo.toml  Dockerfile  openapi.json
backend/src/: lib.rs  main.rs
backend/tests/: integration_test.rs
database/: init.sql
database/migrations/: 001_initial_schema.sql  002_sample_data.sql
docs/: ARCHITECTURE.md  MARKDOWN_PROCESSING.md  SETUP.md  task-forms-documentation.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/app/: entry.client.tsx  entry.server.tsx  root.test.tsx  root.tsx
frontend/app/components/: DeleteConfirmationDialog.test.tsx  DeleteConfirmationDialog.tsx  DeletionFeedback.test.tsx  Layout.test.tsx  Layout.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx  MarkdownRenderer.test.tsx  MarkdownRenderer.tsx  Modal.tsx  NotificationDisplay.test.tsx  NotificationDisplay.tsx  NotificationProvider.test.tsx  NotificationProvider.tsx  ResponsiveLayout.test.tsx  ResponsiveLayout.tsx  TaskCreateForm.test.tsx  TaskCreateForm.tsx  TaskEditForm.test.tsx  TaskEditForm.tsx  TodoList.test.tsx  TodoList.tsx
frontend/app/lib/: api-client.test.ts  api-client.ts  form-state.test.ts  form-state.ts  markdown-parser.test.ts  markdown-parser.ts  (+8 more)
frontend/docs/: FRONTEND_COMPONENTS.md  MARKDOWN_PROCESSING.md  TASK_DELETION_FUNCTIONALITY.md  TASK_FORMS_DOCUMENTATION.md  TODO_LIST_FUNCTIONALITY.md  UI_COMPONENTS_AND_INTERACTIONS.md
frontend/test/: component-docs.test.ts  setup.ts  todo-list-documentation.test.ts
(+2 files in other folders)
