[package]
name = "md-todo-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "md_todo_backend"
path = "src/lib.rs"

[[bin]]
name = "md-todo-backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
